# robotics105

./: README.md  final.c  getDist.h  init.h  sensors.h  task5.c
Cyrus' Corner/Client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Cyrus' Corner/Client/final/: CMakeLists.txt  Makefile  cmake_install.cmake  final  final.c
Cyrus' Corner/Client/include/: cog.h  simpletools.h  simulator.h
Cyrus' Corner/Client/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Cyrus' Corner/Client/src/Client/: ServerConnection.cpp  launcher.cpp  simulator.cpp
Cyrus' Corner/Client/src/Practical_Socket/: PracticalSocket.hpp
Cyrus' Corner/Client/src/Simple_Libraries/TextDevices/libsimpletext/: simpleterm_close.cpp
Cyrus' Corner/Client/src/Simple_Libraries/Utility/libsimpletools/: setTimeout.cpp
Hiru's House/: final.c
